add docs description

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: appg-membership
+title: APPG Memberships
 description: Scraper and raw_data for APPG memberships
 
 baseurl: "/appg-membership"
