--- a/data/packages/appg_groups_and_memberships/datapackage.yaml
+++ b/data/packages/appg_groups_and_memberships/datapackage.yaml
@@ -1,7 +1,7 @@
 name: appg_groups_and_memberships
 title: APPG Groups and Memberships
 description : |
-  APPG register with enxperimental ML membership scrapers.
+  APPG register with experimental ML membership scrapers.
 version: 0.1.0
 licenses:
   
