Update boilerplate info Remove updated from toc

--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -34,6 +34,7 @@ jobs:
             project generate-diffs
             dataset build --all
             dataset version auto --auto-ban major --all --publish
+            dataset publish --all
             
       - name: Push new data
         id: auto-commit-action
