--- a/data/packages/appg_groups_and_memberships/members.resource.yaml
+++ b/data/packages/appg_groups_and_memberships/members.resource.yaml
@@ -1,5 +1,8 @@
 title: APPG Memberships
-description: APPG Memberships scraped using experimental ML scraper.
+description: |
+  APPG Memberships scraped using experimental ML scraper.
+  DO NOT REPLY ON 'ai_search' MEMBERSHIP DATA YET - needs further validation.
+
 custom:
   row_count: 7402
 path: members.parquet
