--- a/data/packages/appg_groups_and_memberships/datapackage.yaml
+++ b/data/packages/appg_groups_and_memberships/datapackage.yaml
@@ -1,6 +1,6 @@
 name: appg_groups_and_memberships
 title: APPG Groups and Memberships
-description: "APPG register with experimental ML membership scrapers.\nDO NOT REPLY\
+description: "APPG register with experimental ML membership scrapers.\nDO NOT RELY\
   \ ON 'ai_search' MEMBERSHIP DATA YET - needs further validation.\n"
 version: 0.5.3
 licenses:
