--- a/data/packages/appg_groups_and_memberships/members.resource.yaml
+++ b/data/packages/appg_groups_and_memberships/members.resource.yaml
@@ -1,5 +1,5 @@
 title: APPG Memberships
-description: "APPG Memberships scraped using experimental ML scraper.\nDO NOT REPLY\
+description: "APPG Memberships scraped using experimental ML scraper.\nDO NOT RELY\
   \ ON 'ai_search' MEMBERSHIP DATA YET - needs further validation.\n"
 custom:
   row_count: 7402
