Apply twfy_id update and blanked likely old lists

--- a/data/packages/appg_groups_and_memberships/datapackage.yaml
+++ b/data/packages/appg_groups_and_memberships/datapackage.yaml
@@ -1,7 +1,6 @@
 name: appg_groups_and_memberships
 title: APPG Groups and Memberships
-description: "APPG register with experimental ML membership scrapers.\nDO NOT RELY\
-  \ ON 'ai_search' MEMBERSHIP DATA YET - needs further validation.\n"
+description: "APPG register with experimental ML membership scrapers."
 version: 0.7.0
 licenses:
 - name: CC-BY-4.0
