First wave manual APPGs

--- a/data/appgs/liver-disease-and-liver-cancer.json
+++ b/data/appgs/liver-disease-and-liver-cancer.json
@@ -40,8 +40,40 @@
   "members_list": {
     "source_method": "manual",
     "source_url": [],
-    "last_updated": "2025-08-28",
+    "last_updated": "2025-09-12",
     "members": [
+      {
+        "name": "Dr Beccy Cooper MP",
+        "is_officer": false,
+        "member_type": "mp",
+        "mnis_id": "5307",
+        "twfy_id": "uk.org.publicwhip/person/26515",
+        "removed": false
+      },
+      {
+        "name": "Lorraine Beavers MP",
+        "is_officer": false,
+        "member_type": "mp",
+        "mnis_id": "5232",
+        "twfy_id": "uk.org.publicwhip/person/26475",
+        "removed": false
+      },
+      {
+        "name": "Robin Swann MP",
+        "is_officer": false,
+        "member_type": "mp",
+        "mnis_id": "5319",
+        "twfy_id": "uk.org.publicwhip/person/25141",
+        "removed": false
+      },
+      {
+        "name": "Peter Bedford MP",
+        "is_officer": false,
+        "member_type": "mp",
+        "mnis_id": "5330",
+        "twfy_id": "uk.org.publicwhip/person/26625",
+        "removed": false
+      },
       {
         "name": "Danny Chambers MP",
         "is_officer": false,
